<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="4dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="4dp"
      android:layout_marginBottom="8dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/taskNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        tools:text="@string/task" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/hoursLabel"
          android:layout_width="@dimen/half_screen"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textSize="18sp"
          tools:text="@string/hours" />

      <TextView
          android:id="@+id/daysTillDueLabel"
          android:layout_width="@dimen/half_screen"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textSize="18sp"
          tools:text="@string/daysTillDue" />
    </LinearLayout>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>